@startuml

title __VIEWMODEL's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace viewModel {
      class com.cleanup.todoc.viewModel.TaskViewModel {
          - currentProject : LiveData<Project>
          - executor : Executor
          + TaskViewModel()
          + createTask()
          + deleteTask()
          + getProject()
          + getTask()
          + init()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace viewModel {
      class com.cleanup.todoc.viewModel.ViewModelFactory {
          - executor : Executor
          + ViewModelFactory()
          + create()
      }
    }
  }
  

  com.cleanup.todoc.viewModel.TaskViewModel -up-|> android.arch.lifecycle.ViewModel
  com.cleanup.todoc.viewModel.TaskViewModel o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
  com.cleanup.todoc.viewModel.TaskViewModel o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource
  com.cleanup.todoc.viewModel.ViewModelFactory .up.|> android.arch.lifecycle.ViewModelProvider.Factory
  com.cleanup.todoc.viewModel.ViewModelFactory o-- com.cleanup.todoc.repositories.ProjectDataRepository : projectDataSource
  com.cleanup.todoc.viewModel.ViewModelFactory o-- com.cleanup.todoc.repositories.TaskDataRepository : taskDataSource


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
